[gd_scene load_steps=12 format=2]

[ext_resource path="res://environment/airlock_outer_door.png" type="Texture" id=1]
[ext_resource path="res://environment/button_door.gd" type="Script" id=2]
[ext_resource path="res://white_square.png" type="Texture" id=3]
[ext_resource path="res://effects/select_square.png" type="Texture" id=4]
[ext_resource path="res://environment/airlock_inner_door.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 8, 7.5 )

[sub_resource type="OccluderPolygon2D" id=7]
polygon = PoolVector2Array( -8, -7, -8, 8, 8, 8, 8, -7 )

[sub_resource type="RectangleShape2D" id=5]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.5, 7 )

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( -9, -7.5, -9, 6.5, 10, 6.5, 10, -7.5 )

[node name="dock_airlock_doors_upper" type="Node2D"]

[node name="door1" type="Node2D" parent="."]

[node name="door_obj" type="Sprite" parent="door1"]
position = Vector2( 0, 0.5 )
texture = ExtResource( 1 )

[node name="staticbody2d" type="StaticBody2D" parent="door1/door_obj"]

[node name="door_col" type="CollisionShape2D" parent="door1/door_obj/staticbody2d"]
shape = SubResource( 6 )

[node name="lightocc2d" type="LightOccluder2D" parent="door1/door_obj"]
position = Vector2( 0, -0.5 )
occluder = SubResource( 7 )

[node name="door_button" type="StaticBody2D" parent="door1"]
position = Vector2( 9.5, 1 )
scale = Vector2( 0.122373, 0.122373 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )
airlock = true
outer_door = true

[node name="Area2D" type="Area2D" parent="door1/door_button"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="door1/door_button/Area2D"]
shape = SubResource( 5 )

[node name="sprite" type="Sprite" parent="door1/door_button"]
modulate = Color( 0.847059, 0.301961, 0.301961, 1 )
texture = ExtResource( 3 )

[node name="hover_sprite" type="Sprite" parent="door1/door_button"]
visible = false
z_index = 2
texture = ExtResource( 4 )

[node name="button_col" type="CollisionShape2D" parent="door1/door_button"]
shape = SubResource( 4 )

[node name="door2" type="Node2D" parent="."]
position = Vector2( 0, 48 )

[node name="door_obj" type="Sprite" parent="door2"]
position = Vector2( 0.5, 1 )
texture = ExtResource( 5 )

[node name="staticbody2d" type="StaticBody2D" parent="door2/door_obj"]

[node name="door_col" type="CollisionShape2D" parent="door2/door_obj/staticbody2d"]
shape = SubResource( 2 )

[node name="lightocc2d" type="LightOccluder2D" parent="door2/door_obj"]
position = Vector2( -0.5, 0.5 )
occluder = SubResource( 3 )

[node name="door_button" type="StaticBody2D" parent="door2"]
position = Vector2( -11, 0 )
scale = Vector2( 0.122373, 0.122373 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )
airlock = true

[node name="Area2D" type="Area2D" parent="door2/door_button"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="door2/door_button/Area2D"]
shape = SubResource( 5 )

[node name="sprite" type="Sprite" parent="door2/door_button"]
modulate = Color( 0.847059, 0.301961, 0.301961, 1 )
texture = ExtResource( 3 )

[node name="hover_sprite" type="Sprite" parent="door2/door_button"]
visible = false
z_index = 2
texture = ExtResource( 4 )

[node name="button_col" type="CollisionShape2D" parent="door2/door_button"]
shape = SubResource( 4 )

[connection signal="mouse_entered" from="door1/door_button/Area2D" to="door1/door_button" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="door1/door_button/Area2D" to="door1/door_button" method="_on_Area2D_mouse_exited"]
[connection signal="mouse_entered" from="door2/door_button/Area2D" to="door2/door_button" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="door2/door_button/Area2D" to="door2/door_button" method="_on_Area2D_mouse_exited"]
